--- a/package.json
+++ b/package.json
@@ -67,5 +67,10 @@
     "require": [
       "babel-core/register"
     ]
+  },
+  "dependencies": {
+    "ava": "^0.18.1",
+    "lodash.isequal": "^4.5.0",
+    "quark-signal": "^1.1.0"
   }
 }
