--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ava": "^0.18.1",
     "babel-cli": "^6.22.2",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
@@ -55,7 +56,8 @@
       "development": {
         "sourceMaps": "inline",
         "plugins": [
-          "transform-runtime"
+          "transform-runtime",
+          "transform-object-rest-spread"
         ]
       }
     }
