--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     ]
   },
   "dependencies": {
-    "lodash.isequal": "^4.5.0",
-    "quark-signal": "^1.1.0"
+    "lodash.isequal": "4.5.0",
+    "quark-signal": "1.1.0"
   }
 }
