--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     ]
   },
   "dependencies": {
+    "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "4.5.0",
+    "lodash.omit": "^4.5.0",
     "quark-signal": "1.1.0"
   }
 }
