--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quark-state",
   "version": "0.0.0-development",
-  "description": "Simple repository to start a new quark package",
+  "description": "Simple state manager based on Singleton design pattern",
   "main": "lib/index.js",
   "scripts": {
     "build": "BABEL_ENV=production babel src -d lib",
